# sus

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
api/assets/: index.html
api/cli/: index.html
api/config/: index.html
api/converter/: index.html
api/crawler/: index.html
api/exceptions/: index.html
api/outputs/: index.html
api/overview/: index.html
api/rules/: index.html
api/scraper/: index.html
api/utils/: index.html
benchmarks/: README.md  __init__.py  benchmark_crawler.py  benchmark_js_rendering.py  benchmark_pipeline.py  conftest.py  test_benchmark_content_quality.py  test_benchmark_converter.py  test_benchmark_crawler.py  test_benchmark_http.py  test_benchmark_pipeline.py  test_benchmark_url.py
docs/: configuration.md  examples.md  getting-started.md  index.md
docs/api/: assets.md  cli.md  config.md  converter.md  crawler.md  exceptions.md  outputs.md  overview.md  rules.md  scraper.md  utils.md
examples/: README.md  advanced-docs.yaml  aptly.yaml  astro.yaml  auth-basic-example.yaml  auth-cookie-example.yaml  auth-header-example.yaml  auth-oauth2-example.yaml  bottle.yaml  content-filtering-example.yaml  htmx.yaml  peewee.yaml  pipeline-example.yaml  plugins-all.yaml  plugins-code-highlight.yaml  requests.yaml  simple-docs.yaml  sitemap-docs.yaml  spa-docs.yaml
examples/claude-agent-sdk/: 01-anthropic-official.yaml  02-anthropic-blog.yaml  99-all-public-urls.yaml  README.md
search/: search_index.json
src/sus/: __init__.py  __main__.py  assets.py  auth.py  checkpoint.py  checkpoint_manager.py  cli.py  config.py  content_quality.py  converter.py  crawler.py  dns.py  exceptions.py  http_client.py  io.py  outputs.py  pipeline.py  rules.py  scraper.py  sitemap.py  types.py  utils.py
src/sus/backends/: __init__.py  base.py  json_backend.py  sqlite_backend.py
src/sus/plugins/: __init__.py  code_highlight.py  image_optimizer.py  link_validator.py  manager.py
stubs/robotexclusionrulesparser/: __init__.pyi
tests/: __init__.py  conftest.py  test_adaptive_retry.py  test_async_io.py  test_auth.py  test_backends_smoke.py  test_background_assets.py  test_batch_io.py  test_builtin_plugins.py  test_cache.py  test_checkpoint.py  test_checkpoint_crash_recovery.py  test_cli.py  test_concurrency_defaults.py  test_conftest_factories.py  test_connection_pooling.py  test_content_filtering.py  test_crawler.py  test_disk_errors.py  test_file_size_limits.py  test_http2.py  test_integration.py  test_integration_checkpoint.py  test_integration_js.py  test_javascript_rendering.py  test_large_scale.py  test_link_extractor.py  test_memory_monitoring.py  test_per_domain_concurrency.py  test_performance.py  test_pipeline.py  test_plugin_system.py  test_progress_calculation.py  test_redirect_loop_fix.py  test_redirect_protection.py  test_retry_behavior.py  test_sitemap_parser.py  test_url_normalizer.py
tests/fixtures/checkpoints/: corrupted_checkpoint.json  mismatched_config_checkpoint.json  old_version_checkpoint.json  valid_checkpoint.json
tests/fixtures/plugins/: chain_plugin.py  error_plugin.py  slow_plugin.py  valid_plugin.py
tests/fixtures/sitemaps/: full-fields.xml  index.xml  large.xml  malformed.xml  nested-index.xml  no-namespace.xml  simple.xml
tests/fixtures/spa/: network-idle-spa.html  react-like-spa.html  simple-spa.html
