[project]
name = "sus"
version = "0.2.0"
description = "Simple Universal (Docs) Scraper"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0.0",
    "aiodns>=3.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "cssselect>=1.3.0",
    "hishel[httpx]>=0.1.0",
    "httpx[http2]>=0.24.0",
    "httpx-retries>=0.2.0",
    "lxml",
    "lxml-stubs>=0.5.1",
    "html-to-markdown>=2.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mypy>=1.18.2",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "pydantic>=2.9",
    "pydantic-settings",
    "pygments>=2.15.0",
    "pymdown-extensions>=10.7.0",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=7.0.0",
    "pytest-httpserver>=1.0.0",
    "pytest-httpx>=0.35.0",
    "pyyaml",
    "rich",
    "robotexclusionrulesparser>=1.7.1",
    "ruff>=0.1.0",
    "typer",
    "types-aiofiles>=25.1.0",
    "types-psutil>=5.9.0",
    "types-pygments>=2.19.0.20251121",
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
sus = "sus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sus"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E501"]  # Allow asserts and long lines in tests

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
# Set source directory for module discovery and custom stubs
mypy_path = "src:stubs"
# Enable implicit namespace packages to find installed packages
namespace_packages = true
# Ensure mypy can find installed packages in virtual environment
explicit_package_bases = true
# Ignore missing imports for packages without stubs
[[tool.mypy.overrides]]
module = [
    "httpx",
    "httpx.*",
    "httpx_retries",
    "httpx_retries.*",
    "hishel",
    "hishel.*",
    "rich",
    "rich.*",
    "typer",
    "typer.*",
    "playwright",
    "playwright.*",
    "PIL",
    "PIL.*",
    "pygments",
    "pygments.*",
    "aiohttp",
    "aiohttp.*",
    "aiodns",
    "aiodns.*",
    "html_to_markdown",
    "html_to_markdown.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
